--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --primary: #4f46e5;
-      --primary-light: #818cf8;
+      --primary: #3b82f6;      /* Indigo Blue */
+      --primary-light: #60a5fa;
       --primary-dark: #3730a3;
       --secondary: #64748b;
+      --accent: #14b8a6;
       --success: #10b981;
       --warning: #f59e0b;
       --danger: #ef4444;
@@ -36,7 +37,7 @@
       display: flex;
       flex-direction: column;
       font-family: 'Inter', system-ui, -apple-system, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #6d28d9 0%, #3b82f6 100%);
       min-height: 100vh;
       color: var(--text);
       line-height: 1.6;
@@ -145,7 +146,7 @@
 
     .progress-bar-modern {
       height: 100%;
-      background: linear-gradient(90deg, var(--success), var(--primary));
+      background: var(--accent);
       border-radius: 10px;
       transition: width 0.6s cubic-bezier(0.4, 0, 0.2, 1);
       position: relative;
@@ -202,9 +203,8 @@
     }
 
     .btn-primary.btn-modern {
-      background: linear-gradient(135deg, var(--primary), var(--primary-light));
-      color: white;
-      box-shadow: 0 4px 14px 0 rgba(79, 70, 229, 0.3);
+      background: linear-gradient(135deg, var(--accent), var(--primary));
+      box-shadow: 0 4px 14px rgba(20, 184, 166, 0.3);
     }
 
     .btn-primary.btn-modern:hover {
@@ -525,7 +525,7 @@
 
             <div class="mt-4">
               <button id="btn-start" class="btn btn-primary btn-modern px-4">
-                <span>Begin Personality Test</span>
+                <span>Start My Personality Test</span>
                 <i class="bi bi-arrow-right ms-2"></i>
               </button>
             </div>
@@ -533,9 +533,9 @@
           <div class="col-12 col-lg-5 text-center">
             <div class="d-flex align-items-center justify-content-center">
               <div class="text-primary">
-                <i class="bi bi-person-circle" style="font-size: 120px;"></i>
+                <img src="assets/vector_01.svg" alt="Profile Icon" class="img-fluid" style="max-width: 120px;">
                 <div class="mt-3">
-                  <h4 class="fw-bold">Ready to discover yourself?</h4>
+                  <h4 class="fw-bold">Ready To Discover Yourself?</h4>
                   <p class="text-muted">40 carefully crafted questions await</p>
                 </div>
               </div>
