minor change on button title

--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
             </button>
             <button id="btn-share" class="btn btn-primary btn-modern">
               <span id="share-text">
-                <i class="bi bi-share me-2"></i>Share Results
+                <i class="bi bi-share me-2"></i>Download Results
               </span>
             </button>
           </div>
